--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
+@import url('./component/_buy-component.css');
+@import url('./component/_select-term.css');
+
 * {
     margin: 0;
     padding: 0;
@@ -49,351 +52,5 @@ body {
 
     @media (max-width: 600px) {
         min-width: 320px;
-    }
-}
-
-.buy-component {
-    padding: 24px;
-
-    font-family: Arial, Helvetica, sans-serif;
-
-    border-radius: .5rem;
-    background-color: rgba(33, 33, 33, .9);
-
-    & .buy-component__top {
-        color: white;
-        font-weight: 700;
-    }
-}
-
-.buy-component__tabs {
-    display: flex;
-    align-items: center;
-    gap: 24px;
-    margin: 1rem 0 1.5rem 0;
-    width: 100%;
-    border-bottom: .7px solid rgba(255, 255, 255, 0.5);
-    color: rgba(255, 255, 255, 0.8);
-}
-
-.buy-component__tab {
-    padding-bottom: .75rem;
-
-
-    &.--is-active {
-        border-bottom: 2px solid white;
-    }
-
-    &[data-sticker]::after {
-        content: attr(data-sticker);
-        display: var(--tab-sticker-show, inline-flex);
-        padding: 6px 8px;
-        margin: auto auto auto 5px;
-        font-size: 0.625rem;
-        background-color: #00A85D;
-        border-radius: 10px;
-        color: black;
-    }
-}
-
-.buy-component__tabs-content {
-    display: flex;
-    margin-bottom: 48px;
-
-    &.--is-hide {
-        display: none;
-    }
-}
-
-.select-term {
-    display: flex;
-    min-width: 100%;
-    padding-bottom: 1rem;
-    color: white;
-
-    @media (max-width: 720px) {
-        flex-flow: column;
-    }
-}
-
-.select-term__first {
-    display: flex;
-    flex-flow: column;
-    min-width: 40%;
-
-    & .select-term__title {
-        margin-bottom: .5rem;
-        font-size: 1rem;
-        font-weight: 700;
-        letter-spacing: 0;
-        line-height: 1.5;
-        text-transform: uppercase;
-    }
-
-    & .select-term__title-flex {
-        display: inline-flex;
-        align-items: center;
-        margin-bottom: .5rem;
-        font-size: 0.775rem;
-        font-weight: 700;
-        letter-spacing: 0;
-        line-height: 1.5;
-        text-transform: uppercase;
-        margin-bottom: 2rem;
-
-        & svg {
-            width: 0.775rem;
-            fill: white;
-        }
-    }
-
-    & .select-term__subtitle {
-        display: inline-flex;
-        align-items: center;
-        gap: 5px;
-
-        margin-bottom: 10px;
-
-        font-weight: 400;
-        font-size: 0.875rem;
-        letter-spacing: 0;
-        line-height: 1.5;
-
-        & svg {
-            width: clamp(0.625rem, 1.154vw - 0.038rem, 1rem);
-            height: 1rem;
-        }
-    }
-}
-
-.select-term__cards {
-    display: flex;
-    gap: 16px;
-
-    @media (max-width: 1100px) {
-        flex-flow: column;
-    }
-}
-
-.select-term__card {
-    display: flex;
-    flex-flow: column;
-    flex: 1;
-
-    padding: 10px;
-
-    border: 2px solid rgba(255, 255, 255, 0.7);
-    border-radius: 2px;
-    background-color: #000;
-    cursor: pointer;
-
-    & p {
-        font-size: clamp(1.125rem, 0.769vw + 0.683rem, 1.375rem);
-        font-weight: 600;
-    }
-
-    & .select-term__up-price {
-        margin: 0.3rem auto 1.7rem 0;
-    }
-
-    & span {
-        display: flex;
-        align-items: flex-end;
-
-        margin: auto auto auto 0;
-        text-align: left;
-        opacity: 0.5;
-        font-size: clamp(0.625rem, 0.385vw + 0.404rem, 0.75rem);
-        padding: 7px 0;
-
-        width: 100%;
-
-        & svg {
-            margin: auto 0 auto auto;
-            width: 1rem;
-            height: 1rem;
-        }
-    }
-
-    &.--is-select {
-        border: 2px solid white;
-    }
-}
-
-.select-term__card:hover {
-    border: 2px solid rgb(139, 85, 152);
-}
-
-.select-term__second {
-    display: flex;
-    flex-flow: column;
-    margin: 2rem 0 0 2rem;
-    min-width: 40%;
-
-    & .select-term__buttons-buy {
-        display: inline-flex;
-        gap: 10px;
-        margin: 10px auto auto auto;
-        width: 100%;
-
-        & .buttons-buy-tokens {
-            padding: 10px 20px;
-            background-color: white;
-            border: 1px solid white;
-            border-radius: 5px;
-            color: black;
-            font-weight: 500;
-        }
-
-        & .buttons-buy-flex {
-            padding: 10px 20px;
-            border: 1px solid white;
-            border-radius: 5px;
-            font-weight: 500;
-        }
-    }
-
-    & .--btn-buy:hover {
-        border: 1px solid rgb(139, 85, 152);
-    }
-
-    @media (max-width: 720px) {
-        margin: 2rem 0 0;
-    }
-}
-
-.select-term__top {
-
-    & .price-text-buy {
-        font-size: clamp(1.75rem, 0.769vw + 1.308rem, 2rem);
-        font-weight: 700;
-        letter-spacing: 0;
-        line-height: 1.5;
-
-        margin-bottom: 1rem;
-    }
-
-    & .desk-text-buy {
-        font-size: clamp(0.75rem, 0.769vw + 0.308rem, 1rem);
-        opacity: .7;
-    }
-}
-
-.select-term__button-add {
-    display: flex;
-    align-items: center;
-    color: #000;
-    width: 100%;
-    opacity: 1;
-    box-shadow: none;
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-    padding-bottom: 9px;
-    padding-top: 9px;
-    border: 1px solid white;
-    background-color: white;
-    user-select: none;
-
-    & h2 {
-        display: flex;
-        width: 100%;
-        font-size: clamp(0.875rem, 0.385vw + 0.654rem, 1rem);
-        font-weight: 600;
-        line-height: 1.25;
-    }
-
-    & svg {
-        width: clamp(1.375rem, 0.385vw + 1.154rem, 1.5rem);
-    }
-
-    &:hover {
-        border: 1px solid rgb(139, 85, 152);
-    }
-}
-
-.select-term__bottom {
-    position: relative;
-    display: flex;
-    align-items: center;
-    flex-flow: column;
-    gap: 24px;
-
-    margin: auto auto auto 0;
-
-    font-weight: 400;
-    font-size: 0.75rem;
-    line-height: 1.5;
-    color: rgba(255, 255, 255, 0.7);
-
-    margin-top: .75rem;
-
-    & svg {
-        width: 0.75rem;
-        fill: white;
-    }
-
-    & span {
-        opacity: 1;
-        color: white;
-        text-decoration: underline;
-        cursor: pointer;
-    }
-}
-
-.buy-component__footer {
-    display: inline-flex;
-    min-width: 100%;
-    padding: 24px 0;
-    border-top: 1px solid rgba(255, 255, 255, 0.5);
-
-    &.--footer-hide {
-        display: none;
-    }
-}
-
-.buy-component__nav {
-    display: inline-flex;
-    align-items: center;
-    gap: 2rem;
-
-    @media (max-width: 1100px) {
-        flex-flow: column;
-        justify-content: start;
-        align-items: start;
-    }
-}
-
-.buy-component__link {
-    position: relative;
-    display: inline-flex;
-    align-items: center;
-    gap: 7px;
-
-    color: #fff;
-    font-size: 0.875rem;
-    line-height: 1.5;
-
-    cursor: pointer;
-
-    & svg {
-        width: clamp(0.875rem, 0.385vw + 0.654rem, 1rem);
-        fill: white;
-    }
-
-    &:hover {
-        text-decoration: underline 2px rgb(139, 85, 152);
-    }
-
-    @media (min-width: 1100px) {
-        &:not(:first-of-type) {
-            &::before {
-                position: absolute;
-                transform: translateX(-16px);
-                content: '';
-                width: 1px;
-                height: 1rem;
-                background-color: rgba(255, 255, 255, 0.5);
-            }
-        }
     }
 }
