--- a/css/component/_select-term.css
+++ b/css/component/_select-term.css
@@ -33,11 +33,6 @@
         line-height: 1.5;
         text-transform: uppercase;
         margin-bottom: 2rem;
-
-        & svg {
-            width: 0.775rem;
-            fill: white;
-        }
     }
 
     & .select-term__subtitle {
@@ -51,12 +46,6 @@
         font-size: 0.875rem;
         letter-spacing: 0;
         line-height: 1.5;
-
-        & svg {
-            width: clamp(0.625rem, 1.154vw - 0.038rem, 1rem);
-            stroke: white;
-            fill: none;
-        }
     }
 }
 
@@ -92,7 +81,6 @@
 
     & span {
         display: flex;
-        align-items: flex-end;
 
         margin: auto auto auto 0;
         text-align: left;
@@ -102,8 +90,8 @@
 
         width: 100%;
 
-        & svg {
-            margin: auto 0 auto auto;
+        & span:last-of-type {
+            margin: auto 0 0 auto;
             width: 1rem;
             height: 1rem;
         }
@@ -217,11 +205,6 @@
     color: rgba(255, 255, 255, 0.7);
 
     margin-top: .75rem;
-
-    & svg {
-        width: 0.75rem;
-        fill: white;
-    }
 
     & span {
         opacity: 1;
