--- a/css/component/_buy-component.css
+++ b/css/component/_buy-component.css
@@ -27,7 +27,7 @@
 
 
     &.--is-active {
-        border-bottom: 2px solid white;
+        box-shadow: 0 2px 0 0 white;
     }
 
     &[data-sticker]::after {
