--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 
 @import url('./component/_buy-component.css');
 @import url('./component/_select-term.css');
+@import url('./component/_header.css');
+@import url('./component/_dialog.css');
 @import url('./fonts.css');
 
 * {
@@ -29,7 +31,6 @@ body {
     flex-flow: column;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
     background-color: rgb(255, 255, 255);
 }
 
