--- a/css/component/_dialog.css
+++ b/css/component/_dialog.css
@@ -5,7 +5,7 @@
 
     position: fixed;
     right: 0;
-    top: 76px;
+    top: 79px;
     left: auto;
     bottom: 0;
 
@@ -13,19 +13,20 @@
     border: none;
     box-shadow: 0 0 5px 0;
     z-index: 1000;
+
+    background-color: white;
 }
 
-.basket__container {
-    padding: 1rem;
-    background-color: white;
+.basket::backdrop {
+    color: rgba(0, 0, 0, 0.5);
 }
 
 .basket__top-cart {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 20px;
     min-width: 100%;
-    margin-bottom: 1rem;
 
     & p {
         font-size: 20px;
@@ -47,8 +48,53 @@
 .basket__new-sub {
     display: flex;
     font-size: 1.3rem;
-    padding: 1rem 0;
+    padding: 1rem 20px;
     min-width: 100%;
-    border-top: 1px solid rgb(207, 207, 207);
-    border-bottom: 1px solid rgb(207, 207, 207);
+    box-shadow: inset 0 2px 0 0 rgb(202, 202, 202);
+    background-color: rgb(233, 233, 233);
+    border-bottom: 1px solid rgb(202, 202, 202);
+}
+
+.basket__container {
+    padding: 20px;
+}
+
+.basket__footer {
+    display: flex;
+    flex-flow: column;
+}
+
+.basket__footer-top {
+    display: inline-flex;
+    align-items: center;
+    justify-content: space-between;
+
+    & p {
+        font-size: 1rem;
+        text-transform: uppercase;
+    }
+}
+
+.basket__footer-desk {
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.7);
+    margin-bottom: 20px;
+}
+
+.basket__footer-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 12px;
+    margin-bottom: 10px;
+
+    font-weight: 600;
+    color: white;
+
+    background-color: black;
+}
+
+.basket__footer-bottom {
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.7);
 }
