--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,11 @@ a {
     text-decoration: none;
 }
 
+html {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
+
 body {
     display: flex;
     flex-flow: column;
