--- a/css/component/_dialog.css
+++ b/css/component/_dialog.css
@@ -1,15 +1,15 @@
 .basket {
-    display: flex;
-    justify-content: center;
+    display: none;
     flex-flow: column;
 
     position: fixed;
     right: 0;
-    top: 79px;
     left: auto;
+    top: 79px;
     bottom: 0;
 
     min-width: 31rem;
+    min-height: calc(100% - 79px);
     border: none;
     box-shadow: 0 0 5px 0;
     z-index: 1000;
@@ -17,8 +17,13 @@
     background-color: white;
 }
 
+.basket[open] {
+    display: flex;
+    flex-flow: column;
+}
+
 .basket::backdrop {
-    color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
 .basket__top-cart {
@@ -57,6 +62,15 @@
 
 .basket__container {
     padding: 20px;
+    border-top: 1px solid rgb(202, 202, 202);
+}
+
+.basket__content {
+    display: flex;
+    flex-flow: column;
+    flex: 1;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .basket__footer {
