--- a/css/component/_header.css
+++ b/css/component/_header.css
@@ -24,6 +24,7 @@
 
     & .header__search {
         display: inline-flex;
+        min-width: 26%;
 
         & .header__input {
             position: relative;
@@ -55,6 +56,10 @@
                 height: 1.2rem;
             }
         }
+
+        @media (max-width: 925px) {
+            display: none;
+        }
     }
 
     & .header__right {
@@ -79,17 +84,22 @@
 
             &[data-basket]::after {
                 position: absolute;
-                content: '0';
+                content: attr(data-basket);
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+                padding: 1px;
 
                 right: 5%;
                 top: 45%;
-                width: 16px;
+                min-width: 16px;
+                min-height: 16px;
+                line-height: 1px;
 
-                font-size: 12px;
-                font-weight: 700;
-                height: 16px;
+                font-size: 11px;
+                font-weight: 600;
 
-                border-radius: 50%;
+                border-radius: 8px;
                 background-color: #5f60ff;
                 color: white;
             }
@@ -112,7 +122,7 @@
         position: relative;
         display: flex;
         align-items: center;
-
+        margin-right: 10px;
         padding: 10px;
         color: white;
 
@@ -143,6 +153,44 @@
             height: 100%;
             background-color: rgba(255, 255, 255, 0.4);
         }
+
+        @media (max-width: 924px) {
+            &::before {
+                position: absolute;
+                content: '';
+                inset: auto -80% auto auto;
+                width: 1px;
+                height: 100%;
+                background-color: rgba(255, 255, 255, 0.4);
+            }
+        }
+    }
+
+    .header__searh-v2 {
+        display: flex;
+        align-items: center;
+        justify-self: center;
+
+        & .mobile-search {
+            display: flex;
+            padding: 10px;
+
+            & svg {
+                position: relative;
+                width: 1.2rem;
+                height: 1.2rem;
+                fill: white;
+            }
+
+            &:hover {
+                background-color: rgba(255, 255, 255, 0.1);
+                border-radius: 5px;
+            }
+        }
+
+        @media (min-width: 925px) {
+            display: none;
+        }
     }
 
     & .header__sign-up {
@@ -160,6 +208,10 @@
 
             & h2 {
                 font-size: 1rem;
+
+                @media (max-width: 785px) {
+                    display: none;
+                }
             }
 
             & span {
