--- a/css/component/_dialog.css
+++ b/css/component/_dialog.css
@@ -53,9 +53,9 @@
     align-items: center;
     padding: 3px 3px 0 3px;
 
-    & svg {
-        width: 0.8rem;
-        height: 0.8rem;
+    & span {
+        color: black;
+        font-weight: bold;
     }
 }
 
@@ -188,5 +188,4 @@
     position: fixed;
     inset: 0;
     opacity: 0;
-    overflow: hidden;
 }
