--- a/css/component/_header.css
+++ b/css/component/_header.css
@@ -50,10 +50,9 @@
             position: absolute;
             transform: translate(8px, 10px);
 
-            & svg {
-                fill: white;
-                width: 1.2rem;
-                height: 1.2rem;
+            & span{
+                color: white;
+                font-size: 20px;
             }
         }
 
@@ -82,19 +81,21 @@
             justify-content: center;
             padding: 10px;
 
-            &[data-basket]::after {
+            &::after {
                 position: absolute;
-                content: attr(data-basket);
+                right: 5%;
+                top: 45%;
+
                 display: inline-flex;
                 align-items: center;
                 justify-content: center;
                 padding: 1px;
 
-                right: 5%;
-                top: 45%;
                 min-width: 16px;
                 min-height: 16px;
                 line-height: 1px;
+
+                content: attr(data-basket-counter);
 
                 font-size: 11px;
                 font-weight: 600;
@@ -110,11 +111,10 @@
             }
         }
 
-        & svg {
+        & span {
             position: relative;
-            width: 1.5rem;
-            height: 1.5rem;
-            fill: white;
+            font-size: 24px;
+            color: white;
         }
     }
 
