--- a/css/component/_header.css
+++ b/css/component/_header.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
 
-    width: 100%;
+    min-width: 100%;
 
     padding: 1rem 0;
     margin-bottom: 5rem;
@@ -21,10 +21,17 @@
         height: 100%;
         margin-right: 1rem;
     }
+}
+
+.header__right {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 10px;
+    width: 100%;
 
     & .header__search {
         display: inline-flex;
-        min-width: 26%;
 
         & .header__input {
             position: relative;
@@ -39,6 +46,10 @@
             width: 100%;
             outline: none;
             appearance: none;
+
+            @media (max-width: 925px) {
+                display: none;
+            }
         }
 
         &:hover {
@@ -49,179 +60,146 @@
         & .header__btn-searh {
             position: absolute;
             transform: translate(8px, 10px);
-
-            & span{
-                color: white;
-                font-size: 20px;
-            }
-        }
-
-        @media (max-width: 925px) {
-            display: none;
-        }
-    }
-
-    & .header__right {
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-        gap: 10px;
-        flex: 1;
-    }
-
-    & .header__baket {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        & .header__btn-basket {
-            position: relative;
             display: inline-flex;
             align-items: center;
-            justify-content: center;
-            padding: 10px;
-
-            &::after {
-                position: absolute;
-                right: 5%;
-                top: 45%;
-
-                display: inline-flex;
-                align-items: center;
-                justify-content: center;
-                padding: 1px;
-
-                min-width: 16px;
-                min-height: 16px;
-                line-height: 1px;
-
-                content: attr(data-basket-counter);
-
-                font-size: 11px;
-                font-weight: 600;
-
-                border-radius: 8px;
-                background-color: #5f60ff;
-                color: white;
-            }
-
-            &:hover {
-                background-color: rgba(255, 255, 255, 0.1);
-                border-radius: 5px;
-            }
-        }
-
-        & span {
-            position: relative;
-            font-size: 24px;
             color: white;
-        }
-    }
+            font-size: 20px;
 
-    & .header__lang {
-        position: relative;
-        display: flex;
-        align-items: center;
-        margin-right: 10px;
-        padding: 10px;
-        color: white;
+            @media (max-width: 925px) {
+                position: static;
+                margin-right: 10px;
+                padding: 10px;
+                transform: none;
 
-        & .header__btn-lang {
-            display: inline-flex;
-            align-items: center;
-            gap: 8px;
-
-            & h2 {
-                font-size: 1rem;
-            }
-
-            & span {
-                font-size: 1.7rem;
-            }
-        }
-
-        &:hover {
-            background-color: rgba(255, 255, 255, 0.1);
-            border-radius: 5px;
-        }
-
-        &::before {
-            position: absolute;
-            content: '';
-            inset: auto -16px auto auto;
-            width: 1px;
-            height: 100%;
-            background-color: rgba(255, 255, 255, 0.4);
-        }
-
-        @media (max-width: 924px) {
-            &::before {
-                position: absolute;
-                content: '';
-                inset: auto -80% auto auto;
-                width: 1px;
-                height: 100%;
-                background-color: rgba(255, 255, 255, 0.4);
-            }
-        }
-    }
-
-    .header__searh-v2 {
-        display: flex;
-        align-items: center;
-        justify-self: center;
-
-        & .mobile-search {
-            display: flex;
-            padding: 10px;
-
-            & svg {
-                position: relative;
-                width: 1.2rem;
-                height: 1.2rem;
-                fill: white;
-            }
-
-            &:hover {
-                background-color: rgba(255, 255, 255, 0.1);
-                border-radius: 5px;
+                &:hover {
+                    background-color: rgba(255, 255, 255, 0.1);
+                    border-radius: 5px;
+                }
             }
         }
 
         @media (min-width: 925px) {
-            display: none;
+            order: -1;
+            margin: auto auto auto 0;
         }
     }
+}
 
-    & .header__sign-up {
+.header__baket {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+
+    & .header__btn-basket {
         position: relative;
-        display: flex;
+        display: inline-flex;
         align-items: center;
+        justify-content: center;
         padding: 10px;
-        margin-left: 2rem;
 
-        & .header__btn-sign-up {
-            display: flex;
+        &::after {
+            position: absolute;
+            right: 5%;
+            top: 45%;
+
+            display: inline-flex;
             align-items: center;
-            gap: 8px;
+            justify-content: center;
+            padding: 1px;
+
+            min-width: 16px;
+            min-height: 16px;
+            line-height: 1px;
+
+            content: attr(data-basket-counter);
+
+            font-size: 11px;
+            font-weight: 600;
+
+            border-radius: 8px;
+            background-color: #5f60ff;
             color: white;
-
-            & h2 {
-                font-size: 1rem;
-
-                @media (max-width: 785px) {
-                    display: none;
-                }
-            }
-
-            & span {
-                font-size: 1.7rem;
-            }
         }
 
         &:hover {
             background-color: rgba(255, 255, 255, 0.1);
             border-radius: 5px;
         }
+    }
+
+    & span {
+        position: relative;
+        font-size: 24px;
+        color: white;
+    }
+}
+
+.header__lang {
+    position: relative;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    color: white;
+
+    & .header__btn-lang {
+        display: inline-flex;
+        align-items: center;
+        gap: 8px;
+
+        & h2 {
+            font-size: 1rem;
+        }
+
+        & span {
+            font-size: 1.7rem;
+        }
+    }
+
+    &:hover {
+        background-color: rgba(255, 255, 255, 0.1);
+        border-radius: 5px;
+    }
+}
+
+.header__sign-up {
+    position: relative;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+
+    & .header__btn-sign-up {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        color: white;
+
+        & h2 {
+            font-size: 1rem;
+
+            @media (max-width: 785px) {
+                display: none;
+            }
+        }
+
+        & span {
+            font-size: 1.7rem;
+        }
+    }
+
+    @media (min-width: 925px) {
+        &::before {
+            position: absolute;
+            content: '';
+            inset: auto auto auto -5px;
+            width: 1px;
+            height: 100%;
+            background-color: rgba(255, 255, 255, 0.4);
+        }
+    }
+
+    &:hover {
+        background-color: rgba(255, 255, 255, 0.1);
+        border-radius: 5px;
     }
 }
