--- a/css/component/_buy-component.css
+++ b/css/component/_buy-component.css
@@ -1,6 +1,6 @@
 .buy-component {
     padding: 24px;
-
+    margin-bottom: 2rem;
     font-family: Arial, Helvetica, sans-serif;
 
     border-radius: .5rem;
