--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'markfont';
-  src:  url('../fonts/markfont.eot?qv4ha8');
-  src:  url('../fonts/markfont.eot?qv4ha8#iefix') format('embedded-opentype'),
-    url('../fonts/markfont.ttf?qv4ha8') format('truetype'),
-    url('../fonts/markfont.woff?qv4ha8') format('woff'),
-    url('../fonts/markfont.svg?qv4ha8#markfont') format('svg');
+  src:  url('../fonts/markfont.eot?g5m6p0');
+  src:  url('../fonts/markfont.eot?g5m6p0#iefix') format('embedded-opentype'),
+    url('../fonts/markfont.ttf?g5m6p0') format('truetype'),
+    url('../fonts/markfont.woff?g5m6p0') format('woff'),
+    url('../fonts/markfont.svg?g5m6p0#markfont') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.ari-minus:before {
+  content: "\e910";
+}
+.ari-pluse:before {
+  content: "\e911";
+}
 .ari-searh:before {
   content: "\e90f";
 }
