--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ body {
 }
 
 .box-generaror__elm {
-    height: 200px;
+    aspect-ratio: 1;
     border-radius: 14px;
     background-color: #f5f5f5;
     margin-bottom: 10rem;
