--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,6 @@ button {
     cursor: pointer;
 }
 
-a {
-    color: white;
-    text-decoration: none;
-}
-
 html {
     font-family: "Josefin Sans", sans-serif;
     font-size: 16px;
@@ -45,15 +40,16 @@ body {
 .box-generator {
     display: flex;
     justify-content: center;
+    gap: 60px;
+    padding: 48px;
+    background-color: red;
 }
 
 .box-generator__first {
     display: flex;
     flex-flow: column;
-    justify-content: center;
     gap: 24px;
     padding: 40px;
-    min-width: 400px;
     border-radius: 12px;
     background-color: white;
 }
@@ -62,7 +58,6 @@ body {
     display: inline-flex;
     align-items: center;
     gap: 24px;
-
     & p {
         font-size: 20px;
         font-weight: 600;
@@ -74,8 +69,6 @@ body {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    flex-flow: column;
-    margin-left: 60px;
     padding: 30px;
     min-width: 100%;
     border-radius: 12px;
@@ -84,8 +77,21 @@ body {
 }
 
 .box-generaror__elm {
+    position: absolute;
     aspect-ratio: 1;
     border-radius: 14px;
     background-color: #f5f5f5;
-    margin-bottom: 10rem;
+}
+
+.box-generato__width {
+    margin-top: 48px;
+}
+
+input {
+    position: relative;
+    display: flex;
+}
+
+.--flex {
+    position: relative;
 }
