--- a/css/components/_input.css
+++ b/css/components/_input.css
@@ -3,7 +3,7 @@
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    width: 95%;
+    width: 100%;
     height: 18px;
     border: none;
     border-radius: 4px;
@@ -42,13 +42,18 @@
 }
 
 .box-generator__title {
+    text-align: right;
     font-size: 18px;
-    margin-bottom: 10px;
+
     font-weight: 600;
 }
 
 label {
-    font-size: 16px;
+    display: inline-flex;
+    padding: 12px;
+    font-size: 14px;
     font-weight: 700;
-    transform: translate(-100px, 1349px);
+    line-height: 0.1px;
+    border-radius: 5px;
+    background-color: #f5f5f5;
 }
