--- a/css/style.css
+++ b/css/style.css
@@ -42,13 +42,12 @@ body {
     justify-content: center;
     gap: 60px;
     padding: 48px;
-    background-color: red;
 }
 
 .box-generator__first {
     display: flex;
     flex-flow: column;
-    gap: 24px;
+    gap: 32px;
     padding: 40px;
     border-radius: 12px;
     background-color: white;
@@ -69,10 +68,13 @@ body {
     display: inline-flex;
     justify-content: center;
     align-items: center;
+
     padding: 30px;
-    min-width: 100%;
+    width: 600px;
+
     border-radius: 12px;
     background-color: white;
+    
     overflow: hidden;
 }
 
@@ -85,13 +87,4 @@ body {
 
 .box-generato__width {
     margin-top: 48px;
-}
-
-input {
-    position: relative;
-    display: flex;
-}
-
-.--flex {
-    position: relative;
 }
