--- a/css/style.css
+++ b/css/style.css
@@ -88,3 +88,12 @@ body {
 .box-generato__width {
     margin-top: 48px;
 }
+
+input[type=number] {
+    background-color: #f5f5f5;
+    border: none;
+    border-radius: 4px;
+    font-family: Roboto Mono, monospace;
+    padding: 5px;
+    width: 56px;
+}
