--- a/css/components/_input.css
+++ b/css/components/_input.css
@@ -1,5 +1,4 @@
-#range,
-#range-2 {
+.box-generator input[type=range] {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
@@ -8,37 +7,34 @@
     border: none;
     border-radius: 4px;
     overflow: hidden;
-}
 
-#range::-webkit-slider-thumb,
-#range-2::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    background-color: #0077ff;
-    border-radius: 50%;
-    height: 18px;
-    width: 18px;
-    margin-top: -7px;
-}
+    &::-webkit-slider-runnable-track {
+        height: 4px;
+        border-radius: 4px;
+        border: 0px solid #fff;
+        background: rgba(0, 119, 255, 0.3);
+    }
 
-#range::-moz-range-thumb,
-#range-2::-moz-range-thumb {
-    -moz-appearance: none;
-    appearance: none;
-    background-color: #0077ff;
-    border: 0px solid #0077ff;
-    border-radius: 50%;
-    height: 18px;
-    width: 18px;
-    margin-top: -7px;
-}
+    &::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        background-color: #0077ff;
+        border-radius: 50%;
+        height: 18px;
+        width: 18px;
+        margin-top: -7px;
+    }
 
-#range::-webkit-slider-runnable-track,
-#range-2::-webkit-slider-runnable-track {
-    height: 4px;
-    border-radius: 4px;
-    border: 0px solid #fff;
-    background: rgba(0, 119, 255, 0.3);
+    &::-moz-range-thumb {
+        -moz-appearance: none;
+        appearance: none;
+        background-color: #0077ff;
+        border: 0px solid #0077ff;
+        border-radius: 50%;
+        height: 18px;
+        width: 18px;
+        margin-top: -7px;
+    }
 }
 
 .box-generator__title {
