--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 
+/* components */
 @import url('./components/_input.css');
+@import url('./components/_checkbox.css');
 
 * {
     margin: 0;
@@ -57,6 +59,7 @@ body {
     display: inline-flex;
     align-items: center;
     gap: 24px;
+
     & p {
         font-size: 20px;
         font-weight: 600;
@@ -74,7 +77,7 @@ body {
 
     border-radius: 12px;
     background-color: white;
-    
+
     overflow: hidden;
 }
 
@@ -150,4 +153,13 @@ input[type=number] {
     border-radius: 12px;
     background-color: #1f2024;
     overflow-x: hidden;
+}
+
+#input-color {
+    height: 40px;
+    width: 40px;
+    background: none;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
