--- a/css/component/_ari-faq.css
+++ b/css/component/_ari-faq.css
@@ -1,4 +1,4 @@
-.ari_faq {
+.ari-faq {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -6,13 +6,13 @@
     margin-bottom: 3rem;
 }
 
-.ari_faq__list {
+.ari-faq__list {
     display: flex;
     justify-content: center;
     flex-flow: column;
 }
 
-.ari_faq__item {
+.ari-faq__item {
     display: flex;
     padding: 1rem 0;
     border-bottom: 1px solid rgba(0, 0, 0, 1);
@@ -22,7 +22,7 @@
     }
 }
 
-.ari_faq__capt {
+.ari-faq__capt {
     position: relative;
     display: flex;
     font-family: 'markfont' !important;
@@ -31,11 +31,11 @@
     font-weight: 600;
 }
 
-.ari_faq__capt::-webkit-details-marker {
+.ari-faq__capt::-webkit-details-marker {
     display: none;
 }
 
-.ari_faq__capt:before {
+.ari-faq__capt:before {
     position: absolute;
     inset: 3px auto auto -30px;
 
@@ -45,11 +45,11 @@
     content: var(--details-mode, '\e911');
 }
 
-details[open] .ari_faq__capt {
+details[open] .ari-faq__capt {
     --details-mode: '\e910'
 }
 
-.ari_faq__desk {
+.ari-faq__desk {
     color: rgba(0, 0, 0, 0.7);
     line-height: 1.25;
     max-width: 800px;
@@ -60,7 +60,7 @@ details[open] .ari_faq__capt {
     }
 }
 
-.ari_faq__link {
+.ari-faq__link {
     color: rgba(0, 0, 0, 0.7);
     line-height: 1.25;
     text-decoration: underline;
