--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 @import url('./component/_select-term.css');
 @import url('./component/_header.css');
 @import url('./component/_dialog.css');
-@import url('./component/_ari_faq.css');
+@import url('./component/_ari-faq.css');
 @import url('./fonts.css');
 
 * {
