--- a/css/component/_dialog.css
+++ b/css/component/_dialog.css
@@ -8,7 +8,7 @@
     top: 79px;
     bottom: 0;
 
-    min-width: 31rem;
+    /* min-width: 31rem; */
     min-height: calc(100% - 79px);
     border: none;
     box-shadow: 0 0 5px 0;
