--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 @import url('./component/_header.css');
 @import url('./component/_dialog.css');
 @import url('./component/_ari-faq.css');
+@import url('./component/_collection.css');
 @import url('./fonts.css');
 
 * {
