--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 @import url('./component/_ari-faq.css');
 @import url('./component/_collection.css');
 @import url('./fonts.css');
+@import url('./component/_video-1.css');
 
 * {
     margin: 0;
@@ -70,4 +71,9 @@ body {
     @media (max-width: 620px) {
         min-width: 420px;
     }
+}
+
+.video {
+    display: flex;
+    align-items: center;
 }
