complete section products | last commit 11.09.2024

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 @import url('./component/_dialog.css');
 @import url('./component/_ari-faq.css');
 @import url('./component/_collection.css');
+@import url('./component/_products.css');
 @import url('./fonts.css');
 @import url('./component/_video-1.css');
 
@@ -47,6 +48,10 @@ body {
     min-width: 1440px;
     margin: 0 auto;
     padding: 0 24px;
+
+    &.--buy-component {
+        margin: 0 auto;
+    }
 
     &.--faq {
         max-width: 1200px;
