--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'markfont';
-  src:  url('../fonts/markfont.eot?g5m6p0');
-  src:  url('../fonts/markfont.eot?g5m6p0#iefix') format('embedded-opentype'),
-    url('../fonts/markfont.ttf?g5m6p0') format('truetype'),
-    url('../fonts/markfont.woff?g5m6p0') format('woff'),
-    url('../fonts/markfont.svg?g5m6p0#markfont') format('svg');
+  src:  url('../fonts/markfont.eot?6qsrhs');
+  src:  url('../fonts/markfont.eot?6qsrhs#iefix') format('embedded-opentype'),
+    url('../fonts/markfont.ttf?6qsrhs') format('truetype'),
+    url('../fonts/markfont.woff?6qsrhs') format('woff'),
+    url('../fonts/markfont.svg?6qsrhs#markfont') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,15 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.ari-play:before {
+  content: "\e912";
+}
+.ari-arrowright:before {
+  content: "\e913";
+}
+.ari-winsvg:before {
+  content: "\e914";
+}
 .ari-minus:before {
   content: "\e910";
 }
