--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'markfont';
-  src:  url('../fonts/markfont.eot?6qsrhs');
-  src:  url('../fonts/markfont.eot?6qsrhs#iefix') format('embedded-opentype'),
-    url('../fonts/markfont.ttf?6qsrhs') format('truetype'),
-    url('../fonts/markfont.woff?6qsrhs') format('woff'),
-    url('../fonts/markfont.svg?6qsrhs#markfont') format('svg');
+  src:  url('../fonts/markfont.eot?fxc6zr');
+  src:  url('../fonts/markfont.eot?fxc6zr#iefix') format('embedded-opentype'),
+    url('../fonts/markfont.ttf?fxc6zr') format('truetype'),
+    url('../fonts/markfont.woff?fxc6zr') format('woff'),
+    url('../fonts/markfont.svg?fxc6zr#markfont') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,21 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.ari-facebook-circle:before {
+  content: "\e915";
+}
+.ari-instagram-circle:before {
+  content: "\e916";
+}
+.ari-twitter-circle:before {
+  content: "\e917";
+}
+.ari-linkedin-circle:before {
+  content: "\e918";
+}
+.ari-youtube:before {
+  content: "\e919";
+}
 .ari-play:before {
   content: "\e912";
 }
