--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import url('./component/_buy-component.css');
 @import url('./component/_select-term.css');
 @import url('./component/_header.css');
+@import url('./component/_footer.css');
 @import url('./component/_dialog.css');
 @import url('./component/_ari-faq.css');
 @import url('./component/_collection.css');
@@ -27,7 +28,7 @@ button {
 }
 
 a {
-    color: white;
+    color: rgb(0, 0, 0);
     text-decoration: none;
 }
 
