complete section autodesk* | last commit 24.09.2024

--- a/css/component/_buy-component.css
+++ b/css/component/_buy-component.css
@@ -4,7 +4,7 @@
     font-family: Arial, Helvetica, sans-serif;
 
     border-radius: .5rem;
-    background-color: rgba(33, 33, 33, .9);
+    background-color: rgb(45, 45, 45, 1);
 
     & .buy-component__top {
         color: white;
