--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 @import url('./component/_collection.css');
 @import url('./component/_products.css');
 @import url('./component/_ar-imagine.css');
+@import url('./component/_autodesk.css');
 @import url('./fonts.css');
 @import url('./component/_video-1.css');
 
