--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'markfont';
-  src:  url('../fonts/markfont.eot?fxc6zr');
-  src:  url('../fonts/markfont.eot?fxc6zr#iefix') format('embedded-opentype'),
-    url('../fonts/markfont.ttf?fxc6zr') format('truetype'),
-    url('../fonts/markfont.woff?fxc6zr') format('woff'),
-    url('../fonts/markfont.svg?fxc6zr#markfont') format('svg');
+  src:  url('../fonts/markfont.eot?8i3o8l');
+  src:  url('../fonts/markfont.eot?8i3o8l#iefix') format('embedded-opentype'),
+    url('../fonts/markfont.ttf?8i3o8l') format('truetype'),
+    url('../fonts/markfont.woff?8i3o8l') format('woff'),
+    url('../fonts/markfont.svg?8i3o8l#markfont') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.ari-download:before {
+  content: "\e91b";
+}
+.ari-chat:before {
+  content: "\e91a";
+}
 .ari-facebook-circle:before {
   content: "\e915";
 }
