--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'markfont';
-  src:  url('../fonts/markfont.eot?8i3o8l');
-  src:  url('../fonts/markfont.eot?8i3o8l#iefix') format('embedded-opentype'),
-    url('../fonts/markfont.ttf?8i3o8l') format('truetype'),
-    url('../fonts/markfont.woff?8i3o8l') format('woff'),
-    url('../fonts/markfont.svg?8i3o8l#markfont') format('svg');
+  src:  url('../fonts/markfont.eot?hrjebx');
+  src:  url('../fonts/markfont.eot?hrjebx#iefix') format('embedded-opentype'),
+    url('../fonts/markfont.ttf?hrjebx') format('truetype'),
+    url('../fonts/markfont.woff?hrjebx') format('woff'),
+    url('../fonts/markfont.svg?hrjebx#markfont') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.ari-send:before {
+  content: "\e91c";
+}
 .ari-download:before {
   content: "\e91b";
 }
