--- a/css/component/_footer.css
+++ b/css/component/_footer.css
@@ -5,6 +5,10 @@
 
     background: #f9f9f9;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
+
+    @media (max-width: 640px) {
+        display: none;
+    }
 }
 
 .footer__block {
@@ -62,6 +66,10 @@
     display: flex;
     gap: 16px;
     list-style: none;
+
+    @media (max-width: 540px) {
+        flex-wrap: wrap;
+    }
 }
 
 .footer-bottom__item {
