--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@
 @import url('./component/_products.css');
 @import url('./component/_ar-imagine.css');
 @import url('./component/_autodesk.css');
+@import url('./component/_au-assi.css');
+@import url('./component/_autodesk-widget.css');
 @import url('./fonts.css');
 @import url('./component/_video-1.css');
 
