--- a/css/component/_au-assi.css
+++ b/css/component/_au-assi.css
@@ -1,26 +1,78 @@
 .au-assi {
     position: fixed;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-
-    height: 50px;
-    width: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-end;
+    gap: 24px;
+    
+    min-width: 100%;
 
     right: 30px;
     bottom: 30px;
     z-index: 2000;
 
-    background-color: rgb(0, 0, 0);
-    border-radius: 30px 30px 0 30px;
     cursor: pointer;
-
-    & .au-assi__content {
-        color: white;
-        opacity: 0.5;
-    }
 
     &.--hide {
         display: none;
+    }
+}
+
+.au-assi__container {
+    display: inline-flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+
+    /* background-color: rgb(0, 0, 0); */
+    /* border-radius: 30px 30px 0 30px; */
+
+    height: 50px;
+    width: 50px;
+}
+
+.au-assi__content {
+    & svg {
+        width: 50px;
+        height: 50px;
+        color: white;
+        aspect-ratio: 1;
+    }
+}
+
+.au-assi__welcome {
+    margin-right: 24px;
+    padding: 24px;
+    border-radius: 10px 10px 0 10px;
+    box-shadow: -1px 2px 1px 4px black;
+    background-color: rgb(255, 255, 255);
+
+    animation: fadeInUp 1s ease-in-out;
+
+    & .au-assi__top {
+        display: flex;
+        justify-content: space-between;
+        font-size: 16px;
+        font-weight: 600;
+        margin-bottom: 10px;
+    }
+
+    & .au-assi__bottom {
+        opacity: 0.8;
+        line-height: 1.3;
+    }
+
+    &.--close {
+        display: none;
+    }
+}
+
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
     }
 }
