--- a/css/component/_autodesk-widget.css
+++ b/css/component/_autodesk-widget.css
@@ -4,21 +4,39 @@
     width: 400px;
     bottom: 30px;
     right: 30px;
+
+    @media (max-width: 730px) {
+        height: 100%;
+        width: 100%;
+        top: 0;
+        left: 0;
+    }
 }
 
 .autodesk-widget__layout {
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 0 20px 20px;
     height: calc(100% - 20px);
     width: calc(100% - 40px);
-    margin: 0 20px 20px;
-    right: 0;
-    bottom: 0;
     box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, .25);
+
+    animation: animCard 1s ease-in-out;
 
     &.--hide {
         display: none;
     }
+
+    @media (max-width: 730px) {
+        margin: 0;
+        height: 100%;
+        width: 100%;
+    }
 }
+
 
 .autodesk-widget__header {
     display: flex;
@@ -41,6 +59,11 @@
         margin: auto 0 auto auto;
         cursor: pointer;
     }
+
+    @media (max-width: 730px) {
+        min-height: 7%;
+        min-width: 100%;
+    }
 }
 
 .autodesk-widget__content {
@@ -53,6 +76,11 @@
     background-color: #f9f9f9;
     overflow-y: auto;
     overflow-x: hidden;
+
+    @media (max-width: 730px) {
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .content__card {
@@ -77,12 +105,15 @@
 }
 
 .message-user {
+    display: inline-flex;
+    flex-wrap: wrap;
     max-width: 300px;
     padding: 20px;
     margin: auto 0 16px auto;
 
 
     font-size: 14px;
+    hyphens: manual;
     line-height: 1.5;
     color: rgb(255, 255, 255);
 
@@ -91,7 +122,6 @@
 }
 
 .content-card__bottom {
-
     & p {
         font-size: 14px;
         line-height: 1.5;
@@ -136,7 +166,7 @@ details[open] .content__example {
     justify-content: center;
     align-items: center;
     padding: 16px 16px 16px 10px;
-    
+
     max-height: 70px;
     width: 100%;
 
@@ -167,5 +197,16 @@ details[open] .content__example {
         font-size: 20px;
         font-weight: 600;
     }
+}
 
+@keyframes animCard {
+    0% {
+        opacity: 0;
+        transform: translateY(110%);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0%);
+    }
 }
