--- a/css/component/_products.css
+++ b/css/component/_products.css
@@ -30,6 +30,10 @@
     padding: 20px 10px;
     border: 1px solid black;
 
+    @media (min-width: 680px) {
+        border-right: none;
+    }
+
     &:not(:last-child) {
         border-bottom: none;
     }
@@ -60,6 +64,14 @@
 
         &:not(:last-child) {
             border-bottom: none;
+        }
+
+        @media (max-width: 680px) {
+            border-right: none;
+        }
+
+        @media (min-width: 779px) {
+            border-right: none;
         }
     }
 }
