--- a/css/component/_autodesk-widget.css
+++ b/css/component/_autodesk-widget.css
@@ -111,6 +111,8 @@
     padding: 20px;
     margin: auto 0 16px auto;
 
+    hyphens: manual;
+
 
     font-size: 14px;
     hyphens: manual;
@@ -178,7 +180,7 @@ details[open] .content__example {
         font-size: 14px;
         line-height: 1.5;
 
-        padding: 4px 12px;
+        padding: 20px 12px 0 12px;
         color: rgb(0, 0, 0);
 
         border: none;
